--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,58 @@
-.App {
-  text-align: center;
+*{
+  padding: 0;
+  margin: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container{
   display: flex;
+  height: 100vh;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background: #96e0f2;
+  font-size:20px;
+}
+
+.header{
+  background: #000;
+  text-align: center;
+  padding: 20px;
+  color:#fff;
+}
+
+.row{
+  flex-grow: 1;
+  display: flex;
+}
+
+.sidebar{
+  background:pink;
+  width: 20%;
+  padding: 20px;
+}
+
+.body{
+  background:yellowgreen;
+  width: 80%;
+  padding: 20px;
+}
+
+.footer{
+  background: #3a3a3a;
+  text-align: center;
+  padding: 20px;
+  color:#fff;
+}
+
+.sidebar nav{
+  list-style: none;
+  padding: 0;
+  margin:0;
+}
+
+.sidebar nav li{
+  padding: 10px;
+  background-color: #3a3a3a;
+  margin-bottom: 5px;
   color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
